Hook up browsing to notebooks in arbitrary locations

--- a/dialogs/open-notebook.glade
+++ b/dialogs/open-notebook.glade
@@ -29,6 +29,9 @@
               </widget>
             </child>
           </widget>
+          <packing>
+            <property name="position">1</property>
+          </packing>
         </child>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area1">
@@ -39,7 +42,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">Browse...</property>
+                <property name="label" translatable="yes">_Browse...</property>
+                <property name="use_underline">True</property>
                 <property name="response_id">1</property>
               </widget>
               <packing>
